--- a/P2/css/main.css
+++ b/P2/css/main.css
@@ -21,6 +21,38 @@ body {
     object-fit: cover;
 }
 
+.three-column {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    column-gap: 2rem;
+}
+
+.stories {
+    margin-bottom: 3rem;
+}
+
+.stories img {
+    object-fit: cover;
+    height: 25rem;
+    width: 100%;
+}
+
+.stories a {
+    color: black;
+}
+
+.story h3 {
+    margin-bottom: 0;
+}
+
+.story:hover {
+    text-decoration: underline;
+}
+
+
+
+
+
 a {
     color: #FF1718;
     text-decoration: none;
@@ -175,6 +207,8 @@ pre {
 
 main {
     padding-top: 2.9rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
 .brands {
@@ -195,7 +229,7 @@ main {
     max-width: 75rem;
     margin-left: auto;
     margin-right: auto;
-    padding: 0rem 1rem;
+    padding: 0rem 0rem;
 }
 
 section {
@@ -231,7 +265,7 @@ section {
 /* For display purposes (to remove warnings) */
 
 h1 {
-    font-size: calc(3.5rem + 6 * ((4.4rem - 320px) / 680));
+    font-size: calc(3.2rem + 6 * ((4.4rem - 320px) / 680));
     font-weight: 400;
     line-height: 3.5rem;
     color: #111;
@@ -259,7 +293,7 @@ h2 {
 
 h3 {
     font-size: 1.8rem;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 h4 {
@@ -488,6 +522,7 @@ label {
     column-gap: 3rem;
     row-gap: 2rem;
     margin-top: 2rem;
+    justify-content: space-evenly;
 }
 
 .large-card h3 {
@@ -515,7 +550,7 @@ label {
 
 .article-card-wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(48.8%, 1fr));
     column-gap: 1rem;
     row-gap: 1rem;
 }
@@ -540,17 +575,51 @@ label {
     justify-self: end;
 }
 
+.article-header {
+    object-fit: cover;
+    height: 25rem;
+    width: 100%;
+    margin-top: 5rem;
+}
+
+.article-title {
+    max-width: 50rem;
+}
+
+.author {
+    font-weight: 300;
+    font-size: 2rem;
+    border-bottom: 1px solid #111;
+    padding-bottom: 2rem;
+}
+
+.article-date {
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #777;
+    flex: 1 1 8rem;
+}
+
+.article-body {
+    flex: 55rem;
+}
+
+.article {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
 .members {
     display: grid;
-    grid-template-columns: repeat(2, 9rem);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill,  minmax(7rem,1fr));
     column-gap: 1rem;
     row-gap: 1rem;
-    justify-content: end;
+    align-content: center;
 }
     
 .members img {
-    object-fit: fill;
+    object-fit: cover;
     width: 9rem;
     height: 10rem;
     filter: grayscale(100%);
