Added about and contact pages

--- a/P2/css/main.css
+++ b/P2/css/main.css
@@ -10,6 +10,7 @@ body {
     font-family: 'IBM Plex Sans', Arial, sans-serif;
 }
 
+
 .two-column {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(48.3%, 1fr));
@@ -17,7 +18,8 @@ body {
 }
 
 .two-column img {
-    height: 50rem;
+    height: 55rem;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -265,9 +267,9 @@ section {
 /* For display purposes (to remove warnings) */
 
 h1 {
-    font-size: calc(3.2rem + 6 * ((4.4rem - 320px) / 680));
-    font-weight: 400;
-    line-height: 3.5rem;
+    font-size: calc(4.5rem + 6 * ((4.4rem - 320px) / 680));
+    font-weight: 300;
+    line-height: 5rem;
     color: #111;
 }
 
@@ -379,22 +381,32 @@ h4 {
 
 /* Image size */
 
-.large {
-    max-width: 80%;
+.image-large {
+    max-height: 30rem;
+    width: 100%;
+    object-fit: cover;
 }
 
-.medium {
-    max-width: 50%;
+.image-medium {
+    max-height: 20rem;
+    width: 100%;
+    object-fit: cover;
 }
 
-.small {
-    max-width: 20rem;
+.image-small {
+    max-height: 10rem;
+    width: 100%;
+    object-fit: cover;
 }
 
 /* Font sizes */
 
 .font-large {
     font-size: 1.2rem;
+}
+
+.font-extra-large {
+    font-size: 1.5rem;
 }
 
 /* Submit and reset buttons */
