--- a/P2/css/main.css
+++ b/P2/css/main.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 html {
     box-sizing: border-box;
 }
 
 * {
-        -webkit-font-smoothing: antialiased; 
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
     margin: 0;
     font-family: 'IBM Plex Sans', Arial, sans-serif;
 }
-
 
 .two-column {
     display: grid;
@@ -54,11 +54,8 @@ body {
     text-decoration: underline;
 }
 
-
-
-
 p {
-    margin-block-start: 0;
+    margin-block-start: 0rem;
 }
 
 a {
@@ -72,6 +69,11 @@ a:hover {
 
 img {
     max-width: 100%;
+}
+
+.caption {
+    font-size: 1rem;
+    color: #666;
 }
 
 pre {
@@ -100,15 +102,14 @@ pre {
 .header li a {
     display: block;
     padding: 13px 20px;
-    font-weight: 400;
+    font-size: 0.9rem;
+    font-weight: 500;
     text-decoration: none;
     color: #222;
-    transition: 0.2s ease-in;    
 }
 
 .header li a:hover, .header .menu-btn:hover {
-    color: #FE1E28;
-    transition: 0.2s ease-in;
+    text-decoration: underline;
 }
 
 .header .logo {
@@ -215,8 +216,8 @@ pre {
 
 main {
     padding-top: 2.9rem;
-    padding-right: 1rem;
-    padding-left: 1rem;
+    /* padding-left: 1rem;
+    padding-right: 1rem; */
 }
 
 .brands {
@@ -226,7 +227,7 @@ main {
     align-items: center;
     justify-items: center;
 }
-                                        
+
 .brands img {
     filter: grayscale(100%);
     max-height: 6rem;
@@ -245,8 +246,7 @@ main {
 }
 
 section {
-    margin-top: 2rem;
-    padding: 3rem 0rem 2rem 0rem;
+    padding: 4rem 1rem 5rem 1rem;
 }
 
 .section-body {
@@ -283,25 +283,58 @@ section {
 
 /* For display purposes (to remove warnings) */
 
-h1 {
-    font-size: calc(3.3rem + 6 * ((4.4rem - 320px) / 680));
-    font-weight: 400;
-    line-height: 4rem;
-    color: #111;
+.landing {
+    padding: 7rem 1rem 7rem 1rem;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgb(190, 218, 240) 50%);
+    /* background-color: rgb(224, 233, 240); */
+    /* background-color: #71719d;
+    opacity: 1;
+    background-image: radial-gradient(circle at center center, #ff0000, #71719d), repeating-radial-gradient(circle at center center, #990b0b, #a10a0a, 6px, transparent 12px, transparent 6px);
+    background-blend-mode: multiply;
+    background-attachment: fixed; */
+    /* background: url(/img/landing-4.jpg);
+    background-attachment: fixed;
+    background-position: right;
+    background-repeat: no-repeat; */
+    /* background-color: #000;
+    background: url(/img/landing-4.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-attachment: fixed; */
+}
+
+.landing h1 {
+    font-size: calc(6rem + 6 * ((4.4rem - 320px) / 680));
+    font-weight: 500;
+    line-height: 6rem;
+    color: black;
+    max-width: 60rem;
+    word-wrap: break-word;
+}
+
+.landing img {
+    margin-top: 4rem;
 }
 
 .subheading {
-    font-size: calc(1.6rem + 6 * ((4.4rem - 320px) / 680));
-    font-weight: 400;
-    color: #111;
+    font-size: calc(1.8rem + 6 * ((4.4rem - 320px) / 680));
+    font-weight: 500;
+    color: black;
+    max-width: 40rem;
+}
+
+h1 {
+    font-size: calc(3.1rem + 6 * ((4.4rem - 320px) / 680));
+    font-weight: 500;
+    line-height: 4rem;
+    color: #000;
 }
 
 section h2 {
-    border-top: 2px solid #111;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 2.4rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(50%, 60%));
+    grid-template-columns: repeat(auto-fill, minmax(50%, 30rem));
     margin-block-start: 0;
     padding-top: 1.5rem;
 }
@@ -313,6 +346,7 @@ h2 {
 h3 {
     font-size: 1.9rem;
     font-weight: 400;
+    margin-block-end: 0.7rem;
 }
 
 h4 {
@@ -360,16 +394,21 @@ h4 {
 }
 
 .bg-black {
-    background-color: #111;
+    background-color: #121212;
 }
 
 .bg-gray {
-    background-color: #DEE1E5;
+    background-color: #EEF1F7;
     /* background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(212, 219, 224, 1) 100%); */
 }
 
 .bg-dark-gray {
     background-color: #353A3E;
+}
+
+.bg-black-gray {
+    background-color: #121619;
+    color: white;
 }
 
 .red {
@@ -429,19 +468,18 @@ h4 {
 }
 
 .font-medium {
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 .font-large {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 
 .font-extra-large {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
 /* Submit and reset buttons */
-
 
 .button-nav {
     display: inline-block;
@@ -564,21 +602,24 @@ label {
 
 .cards img:hover {
     filter: grayscale(100%);
+    transform: scale(1.02);
     transition: 0.1s ease-in;
 }
 
 .cards h3 {
     margin-block-start: 0rem;
     margin-block-end: 0.1rem;
+    color: white;
 }
 
 .cards h4 {
+    color: white;
     margin-block-start: 0.5rem;
     margin-block-end: 3rem;
 }
 
 .cards a {
-    color: black;
+    color: white;
 }
 
 .large-card {
@@ -595,7 +636,6 @@ label {
     font-size: 1.2rem;
 }
 
-
 .large-card img {
     height: 25rem;
     width: 100%;
@@ -611,7 +651,7 @@ label {
 }
 
 .article-card {
-    background-color: #eff1f5;
+    background-color: #F2F4F8;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
     padding: 1.5rem 1.5rem;
@@ -619,8 +659,8 @@ label {
     row-gap: 1rem;
 }
 
-
 .article-card h3 {
+    font-size: 1.6rem;
     font-weight: 400;
     margin-block-start: 0;
 }
@@ -664,36 +704,36 @@ label {
     flex-wrap: wrap;
 }
 
-
 .members {
     display: grid;
-    grid-template-columns: repeat(auto-fit,  minmax(7rem,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(7rem, 1fr));
     column-gap: 1rem;
     row-gap: 1rem;
     align-content: center;
 }
-    
+
 .members img {
     object-fit: cover;
-    width: 9rem;
-    height: 10rem;
+    width: 8rem;
+    height: 9rem;
     filter: grayscale(100%);
 }
 
 footer {
-    background-color: #131619;
+    background-color: #1F2327;
     color: white;
-    padding: 3rem 1rem 10rem 1rem;    
+    padding: 3rem 1rem 15rem 1rem;
 }
 
 footer p {
     font-weight: 600;
+    font-size: 1rem;
 }
 
 footer a {
     color: white;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 footer a:hover {
@@ -707,7 +747,7 @@ footer img {
 
 .footer-contact {
     background-color: #9E9EAC;
-    color: white;    
+    color: white;
     margin-top: 4rem;
 }
 
@@ -725,7 +765,7 @@ footer img {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     grid-template-rows: 3.3rem;
-    padding: 0.7rem 0rem 0.7rem 0rem;    
+    padding: 0.7rem 0rem 0.7rem 0rem;
     justify-content: end;
 }
 
@@ -744,7 +784,7 @@ footer img {
     color: white;
 }
 
-.contact-text {    
+.contact-text {
     padding: 1rem 0rem 1rem 0rem;
     font-size: 1.3rem;
 }
@@ -762,12 +802,12 @@ footer img {
 }
 
 .footer-list {
-    display: inline-grid;    
+    display: inline-grid;
     row-gap: 0.5rem;
 }
 
-.footer-copyright {   
-    font-size: 0.9rem; 
+.footer-copyright {
+    font-size: 0.9rem;
     margin-top: 8rem;
     color: #aaa;
 }
