--- a/P2/css/main.css
+++ b/P2/css/main.css
@@ -54,6 +54,86 @@ body {
     text-decoration: underline;
 }
 
+/* Project cards */
+
+.projects {
+    margin-bottom: 3rem;
+}
+
+.project-card img {
+    object-fit: cover;
+    height: 50rem;
+    width: 100%;
+}
+
+.project-card a {
+    color: black;
+}
+
+.project-card h3 {
+    margin-bottom: 0;
+}
+
+.project-card:hover {
+    text-decoration: underline;
+}
+
+
+/* Project page */
+
+.project{
+    background-color: #070707;
+    color: white;
+}
+
+.project .caption {
+    color: #ccc;
+}
+
+.project-header {
+    object-fit: cover;
+    height: 35rem;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.project .two-column {
+    grid-template-columns: repeat(auto-fill, minmax(46.3%, 1fr));
+    column-gap: 5rem;
+    margin-bottom: 4rem;
+}
+
+.project-title {
+    font-size: calc(6rem + 6 * ((4.4rem - 320px) / 680));
+    line-height: 6rem;
+    font-weight: 300;
+    color: white;
+    margin-block-end: 0;
+    max-width: 60rem;
+    word-wrap: break-word;
+}
+
+.project h2 {
+    font-weight: 500;
+    max-width: 60rem;
+    word-wrap: break-word;
+}
+
+.project h3 {
+    font-weight: 500;
+    border-top: 2px solid white;
+    display: inline-block;
+    padding-top: 0.5rem;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+}
+
+.project h4 {
+    font-weight: 600;
+    color: white;
+    margin-block-start: 0rem;
+}
+
 p {
     margin-block-start: 0rem;
 }
@@ -216,8 +296,9 @@ pre {
 
 main {
     padding-top: 2.9rem;
-    /* padding-left: 1rem;
-    padding-right: 1rem; */
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-bottom: 5rem;
 }
 
 .brands {
@@ -226,6 +307,11 @@ main {
     column-gap: 3rem;
     align-items: center;
     justify-items: center;
+    max-width: 75rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
 .brands img {
@@ -283,9 +369,18 @@ section {
 
 /* For display purposes (to remove warnings) */
 
+.cover-medium {
+    padding: 20rem 1rem 1rem 1rem;
+    background-color: rgb(15, 15, 15);
+}
+
+.cover-medium h1 {
+    color: white;
+}
+
 .landing {
-    padding: 7rem 1rem 7rem 1rem;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgb(190, 218, 240) 50%);
+    padding: 3rem 1rem 0rem 1rem;
+    /* background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgb(190, 218, 240) 50%); */
     /* background-color: rgb(224, 233, 240); */
     /* background-color: #71719d;
     opacity: 1;
@@ -301,14 +396,14 @@ section {
     background-position: right;
     background-repeat: no-repeat;
     background-attachment: fixed; */
+
 }
 
 .landing h1 {
-    font-size: calc(6rem + 6 * ((4.4rem - 320px) / 680));
-    font-weight: 500;
+    font-size: calc(5.5rem + 6 * ((4.4rem - 320px) / 680));
+    font-weight: 600;
     line-height: 6rem;
     color: black;
-    max-width: 60rem;
     word-wrap: break-word;
 }
 
@@ -320,11 +415,10 @@ section {
     font-size: calc(1.8rem + 6 * ((4.4rem - 320px) / 680));
     font-weight: 500;
     color: black;
-    max-width: 40rem;
 }
 
 h1 {
-    font-size: calc(3.1rem + 6 * ((4.4rem - 320px) / 680));
+    font-size: calc(5.5rem + 6 * ((4.4rem - 320px) / 680));
     font-weight: 500;
     line-height: 4rem;
     color: #000;
@@ -602,7 +696,6 @@ label {
 
 .cards img:hover {
     filter: grayscale(100%);
-    transform: scale(1.02);
     transition: 0.1s ease-in;
 }
 
@@ -651,7 +744,7 @@ label {
 }
 
 .article-card {
-    background-color: #F2F4F8;
+    background-color: #fff;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
     padding: 1.5rem 1.5rem;
@@ -679,6 +772,8 @@ label {
 
 .article-title {
     max-width: 50rem;
+    font-size: calc(3.1rem + 6 * ((4.4rem - 320px) / 680));
+    font-weight: 400;
 }
 
 .author {
@@ -719,6 +814,27 @@ label {
     filter: grayscale(100%);
 }
 
+.two-column.team {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(46.3%, 1fr));
+    column-gap: 5rem;
+}
+
+.team {
+    margin-bottom: 5rem;
+}
+
+.team h3 {
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.team img {
+    object-fit: cover;
+    filter: grayscale(100%);
+    max-height: 37rem;
+}
+
 footer {
     background-color: #1F2327;
     color: white;
@@ -748,7 +864,6 @@ footer img {
 .footer-contact {
     background-color: #9E9EAC;
     color: white;
-    margin-top: 4rem;
 }
 
 .contact-wrapper {
