Added portfolio page

--- a/P2/css/main.css
+++ b/P2/css/main.css
@@ -15,6 +15,20 @@ body {
     font-family: 'IBM Plex Sans', Arial, sans-serif;
 }
 
+.four-column {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    column-gap: 1rem;
+    row-gap: 0rem; 
+}
+
+.two-row {
+    display: grid;
+    grid-template-rows: repeat(auto-fill, minmax(48.3%, 1fr));
+    column-gap: 1rem;
+    row-gap: 2rem; 
+}
+
 .two-column {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(48.3%, 1fr));
@@ -84,10 +98,12 @@ body {
     font-size: 2.6rem;
     font-weight: 400;    
     margin-block-start: 0;
+    max-width: 20rem;
 }
 
 .project-card p {
     font-size: 1.3rem;
+    max-width: 30rem;
 }
 
 .project-card:hover {
@@ -158,6 +174,10 @@ body {
 .other-project h5 {
     font-weight: 400;
     font-size: 1.1rem;    
+}
+
+.other-project h6 {
+    font-size: 1.2rem;
 }
 
 p {
@@ -906,11 +926,11 @@ label {
 
 
 .team {
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 }
 
 .team h3 {
-    font-size: 3rem;
+    font-size: 3.1rem;
     font-weight: 400;
     margin-block-start: 0rem;
 }
@@ -918,8 +938,8 @@ label {
 .team img {
     object-fit: cover;
     filter: grayscale(100%);
-    max-height: 38rem;
-    max-width: 35rem;
+    max-height: 30rem;
+    max-width: 28rem;
     margin-bottom: 1rem;
 }
 
