--- a/P2/css/main.css
+++ b/P2/css/main.css
@@ -76,29 +76,33 @@ body {
 
 .project-card {
     margin-bottom: 4rem;
+    background-color: #F2F4F8;
+    padding: 1rem;
+}
+
+.project-card:hover {
+    background-color: #DDE1E5;
 }
 
 .project-card a {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(49%, 1fr)); 
     column-gap: 1rem;
+    color: black;
 }
 
 .project-card img {
     object-fit: cover;
-    height: 25rem;
+    height: 22rem;
     width: 100%;
 }
 
-.project-card a {
-    color: black;    
-}
 
 .project-card h3 {
     font-size: 2.6rem;
     font-weight: 400;    
     margin-block-start: 0;
-    max-width: 20rem;
+    max-width: 25rem;
 }
 
 .project-card p {
@@ -772,8 +776,6 @@ label {
 }
 
 .card img:hover {
-    -webkit-box-shadow: 0px 0px 50px -3px rgb(190, 190, 190);
-    box-shadow: 0px 0px 50px -3px rgb(190, 190, 190);
     transition: 0.2s ease-in;
 }
 
@@ -798,7 +800,7 @@ label {
 }
 
 .card:hover {
-    transform: scale(1.02);
+    transform: scale(1.04);
     transition: 0.2s ease-in;
 }
 
@@ -948,7 +950,7 @@ label {
 }
 
 footer {
-    background-color: #13171A;
+    background-color: #121619;
     color: white;
     padding: 3rem 1rem 10rem 1rem;
 }
